--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ nav{
     overflow-x: hidden;
 }
 
+.fa-bars{
+    display: none;
+    font-size: 30px;
+}
+
 nav img{
     width: 100%;
     height: 600px;
@@ -203,14 +208,13 @@ nav .nav-text button:hover{
 
 .manager .manager-content{
     justify-content: space-between;
-    padding: 0 150px;
+    padding: 0 20px;
     width: 100%;
     height: 600px;
     position: absolute;
     top: 0%;
     z-index: 10;
 }
-
 .manager .manager-content img{
     width: 400px;
     height: 400px;
@@ -588,4 +592,163 @@ nav .nav-text button:hover{
 .foot .info i:hover{
     color: #fff;
     cursor: pointer;
+}
+
+.sidebar{
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    width: 50%;
+    height: 100vh;
+    background: #ff6600;
+    z-index: 10;
+    color: #fff;
+    transition: left 0.3s;
+}
+
+.sidebar .hori-center{
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 10px 0;
+    width: 100%;
+    padding: 20px;
+}
+.sidebar .hori-center i{
+    margin-right: 10px;
+}
+.sidebar .hori-center:hover{
+    background-color: #fff;
+    color: #ff6600;
+    cursor: pointer;
+}
+.services i{
+    font-size: 40px;
+}
+.happy-customers p{
+    max-width: 700px;
+}
+
+@media screen and (max-width:720px) {
+    body{
+        overflow-x: hidden;
+    }
+    nav{
+        overflow-y: hidden;
+    }
+    .fa-bars{
+        display: block;
+    }
+    nav ul li{
+        display: none;
+    }
+    nav .nav-text h2{
+        font-size: 30px;
+    }
+    .sidebar{
+        display: block;
+    }
+    .brands img{
+        width:100px;
+    }
+    .about{
+        font-size: 10px;
+    }
+    .manager{
+        font-size: 10px;
+    }
+    .manager .manager-content img{
+        width:200px;
+        height: 200px;
+        border: 4px solid #ff6600;
+    }
+    .services i{
+        font-size: 20px;
+    }
+    .services .card{
+        width: 150px;
+        height: 100px;
+        margin:10px 15px;
+    }
+    .services h3{
+        font-size: 12px;
+    }
+    .happy-customers{
+        font-size:15px;
+    }
+    .happy-customers p{
+        max-width: 250px;
+    }
+    .card2 img{
+        width: 150px;
+        height: 100px;
+    }
+    .card2 h2{
+        font-size: 13px;
+    }
+    .cool-facts .details h1{
+        font-size: 20px;
+    }
+    .cool-facts .details i{
+        font-size: 30px;
+    }
+    .cool-facts .content .details{
+        margin: 20px 20px;
+    }
+    .team .hori-center{
+        flex-wrap: wrap;
+    }
+    .newsletter .content .inputBar input{
+       width: 400px;
+    }
+    .newsletter .content .inputBar i{
+        left: 14%;
+    }
+    .video-promo h3{
+        font-size: 13px;
+        max-width: 300px;
+    }
+    .contact-us .info iframe{
+        width: 500px;
+    }
+    .contact-us .info .time h1, .contact-us .info .phone h1{
+        font-size: 10px;
+    }
+    .contact-us .info .time hr, .contact-us .info .phone hr{
+        width: 100px;
+    }
+    .contact-us .info .time p, .contact-us .info .phone p{
+        font-size: 10px;
+    }
+    .contact-us .info .time{
+        left: 5%;
+        width: 200px;
+    }
+    .contact-us .info .phone{
+        left: 50%;
+        width: 200px;
+    }
+    .contact-us .info .hori-center{
+        flex-wrap: wrap;
+    }
+    .email .info .inputBar2{
+        width: 200px;
+    }
+    .email .info .inputBar2 input{
+        width: 200px;
+        font-size: 13px;
+    }
+    .email .info textarea{
+        width: 400px;
+    }
+    .sendMail{
+        width: 200px;
+    }
+    .foot .info h2{
+        font-size: 10px;
+    }
+    .foot .info .hori-center i{
+        font-size: 25px;
+    }
 }
